enum_to_enum_derive/tests/examples/basic_fail.stderr
warning: associated function is never used: `to_compile_errors`
   --> $DIR/lib.rs:644:12
    |
644 |     pub fn to_compile_errors(&self) -> Vec<TokenStream2> {
    |            ^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: 1 warning emitted

error: #[from_enum(Src)] must appear at least once to specify the source enum(s)
 --> $DIR/basic_fail.rs:9:1
  |
9 | #[from_enum(Src, effect_typeS = nope)]
  | ^

error[E0601]: `main` function not found in crate `$CRATE`
  --> $DIR/basic_fail.rs:1:1
   |
1  | / use from_enum::FromEnum;
2  | |
3  | | #[derive(Debug, Clone, PartialEq, Eq)]
4  | | enum Src {
...  |
11 | |     Case1(String),
12 | | }
   | |_^ consider adding a `main` function to `$DIR/tests/examples/basic_fail.rs`
